kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: webnginx          
        image: tulamelki/neweng
        lifecycle:
          preStop:                  
            exec:
              command: [ 'sh', '-c', 'rm /homework/index.html'] 
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /homework     
          name: volume
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 4
      volumes:
      - name: volume              
        emptyDir:
          sizeLimit: 800Mi
