kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ingress-host
spec:
  rules:
  - host: homework.otus
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-nginx
            port:
              number: 80
      - path: /homework/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-nginx
            port:
              number: 80
